# Doomer

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: chara.cpp  chara.hpp  checkconflict.hpp  lineseg.hpp  main.cpp  rays.hpp  walls.hpp
